add coming soon

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="apple-touch-icon" sizes="180x180" href="/favicon_io/apple-touch-icon.png" />
 
-  <link rel="manifest" href="/public//favicon_io/site.webmanifest" />
+  <link rel="manifest" href="/public/images/favicon.png "/>
 
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css" />
@@ -133,32 +133,32 @@
           </div>
           <div id="p1line">
             <a class="s14" href="https://adityakr3.github.io/Tik-tok-game/"></a>
-            <a class="s15" href="#"></a>
+            <a class="s15" href="https://translater-upper-case-and-lower-case.vercel.app"></a>
             <a class="s16" href="#"></a>
           </div>
         </div>
         <div id="slide2">
           <div id="p1line">
-            <a class="s21" href="#"></a>
-            <a class="s22" href="#"></a>
-            <a class="s23" href="#"></a>
+            <a class="s21 text" href="#">Coming soon......</a>
+            <a class="s22 text" href="#">Coming soon......</a>
+            <a class="s23 text" href="#">Coming soon......</a>
           </div>
           <div id="p1line">
-            <a class="s24" href="#"></a>
-            <a class="s25" href="#"></a>
-            <a class="s26" href="#"></a>
+            <a class="s24 text" href="#">Coming soon......</a>
+            <a class="s25 text" href="#">Coming soon......</a>
+            <a class="s26 text" href="#">Coming soon......</a>
           </div>
         </div>
         <div id="slide3">
           <div id="p1line">
-            <a class="s31" href="https://translater-upper-case-and-lower-case.vercel.app"></a>
-            <a class="s32" href=""></a>
-            <a class="s33" href="#"></a>
+            <a class="s31 text" href="">Coming soon......</a>
+            <a class="s32 text" href="">Coming soon......</a>
+            <a class="s33 text" href="#">Coming soon......</a>
           </div>
           <div id="p1line">
-            <a class="s34" href="#"></a>
-            <a class="s35" href="#"></a>
-            <a class="s36" href="#"></a>
+            <a class="s34 text" href="#">Coming soon......</a>
+            <a class="s35 text" href="#">Coming soon......</a>
+            <a class="s36 text" href="#">Coming soon......</a>
           </div>
         </div>
       </div>
