--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
   <title>Aditya.tech</title>
 </head>
-
 <body>
   <div id="parentofall">
     <div id="loader">
@@ -27,6 +26,7 @@
     </div>
     <div id="mcircle"></div>
     <div id="main">
+      <a class="resume" href="https://drive.google.com/file/d/1MncSI5aiZNMOnukpwMiAXRDAAaunEIZv/view">Download Resume</a>
       <div class="hnav">
         <h3>LOGO</h3>
         <div class="center">
