--- a/index.html
+++ b/index.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="apple-touch-icon" sizes="180x180" href="/favicon_io/apple-touch-icon.png" />
-
   <link rel="manifest" href="/public/images/favicon.png "/>
-
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css" />
   <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet" />
@@ -44,7 +41,7 @@
             <a id="blackcolor" class="social" href="https://github.com/Adityakr3"><i id="github" class="ri-github-fill"></i></a>
             <a class="social" href="https://www.linkedin.com/in/aditya-kumar-5444541a0/"><i class="ri-linkedin-fill"></i></a>
             <a class="social" href="https://instagram.com/aayan_raj_adi?igshid=OGQ5ZDc2ODk2ZA=="><i class="ri-instagram-fill"></i></a>
-            <a class="social" href="#"><i class="ri-twitter-fill"></i></a>
+            <a class="social" href="https://twitter.com/kumar_adit51275"><i class="ri-twitter-fill"></i></a>
           </div>
           <div class="bottom">
             <i class="ri-at-line"></i>
