" x => o" nothing to change

--- a/index.html
+++ b/index.html
@@ -77,18 +77,18 @@
           <div id="skills">
             <div id="skleft">
               <div id="skleftchild">
-                <h5>HTML 5</h5>
-                <h5>CSS 3</h5>
-                <h5>JavaScript ES6</h5>
-                <h5 id="ib">GSAP</h5>
+                <h5 class="point bright a" >HTML 5</h5>
+                <h5 class="point a">CSS 3</h5>
+                <h5 class="point a">JavaScript ES6</h5>
+                <h5 class="point a" id="ib">GSAP</h5>
               </div>
             </div>
             <div id="skright">
               <div id="skrightchild">
-                <h5>Node.JS</h5>
-                <h5>Express.JS</h5>
-                <h5>MongoDB</h5>
-                <h5 id="ib">React.JS</h5>
+                <h5 class="point a" >Node.JS</h5>
+                <h5 class="point a">Express.JS</h5>
+                <h5 class="point a">MongoDB</h5>
+                <h5 class="point a" id="ib">React.JS</h5>
               </div>
             </div>
           </div>
@@ -111,6 +111,7 @@
           </div>
         </div>
       </div>
+      <!-- /* this code is All Rights Reserved form aditya.tech */ -->
     </div>
     <div id="projects">
       <div id="navprojects">
@@ -181,15 +182,16 @@
       </div>
       <div id="realabout">
         <div id="realaboutleft">
-          <p id="abhy">
+          <p id="adi">
             Hi,<br />
             I'm Aditya
           </p>
-          <p id="abhydesc">
+          <!-- /* this code is All Rights Reserved form aditya.tech */ -->
+          <p id="adidesc">
             I am a passionate front-end web developer currently working
             towards learning MERN stack to further enhance my skills.
           </p>
-          <p id="abhydesc2">
+          <p id="adidesc2">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim
             tempore sit natus temporibus optio? Suscipit perferendis magni
             debitis ab exercitationem eum quia aut magnam aperiam.
