--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
     <div id="mcircle"></div>
     <div id="main">
-      <a class="resume" href="https://drive.google.com/file/d/1MncSI5aiZNMOnukpwMiAXRDAAaunEIZv/view">Download Resume</a>
+      <a class="resume" href="https://docs.google.com/document/d/1eNhway-W0rKVj9NhK3jSg13dQDHcmWjAuEchtYcXjJs/edit?usp=sharing">Download Resume</a>
       <div class="hnav">
         <h3>LOGO</h3>
         <div class="center">
