--- a/index.html
+++ b/index.html
@@ -188,13 +188,11 @@
           </p>
           <!-- /* this code is All Rights Reserved form aditya.tech */ -->
           <p id="adidesc">
-            I am a passionate front-end web developer currently working
-            towards learning MERN stack to further enhance my skills.
-          </p>
-          <p id="adidesc2">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim
-            tempore sit natus temporibus optio? Suscipit perferendis magni
-            debitis ab exercitationem eum quia aut magnam aperiam.
+            As a front-end web developer with core experience in React, 
+            I have a strong understanding of the fundamentals of web development 
+            ,including HTML, CSS, and JavaScript. I am also proficient in using 
+            React to build user interfaces that are both functional and visually 
+            appealing. 
           </p>
         </div>
         <div id="realaboutright"></div>
