--- a/index.html
+++ b/index.html
@@ -165,14 +165,18 @@
       <div class="wrapper">
         <div class="marquee">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
-            volutpat, ante eu bibendum tincidunt, sem lacus vehicula augue, ut
-            suscipit.
+                  As a front-end web developer with core experience in React, 
+            I have a strong understanding of the fundamentals of web development 
+            ,including HTML, CSS, and JavaScript. I am also proficient in using 
+            React to build user interfaces that are both functional and visually 
+            appealing.
           </p>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
-            volutpat, ante eu bibendum tincidunt, sem lacus vehicula augue, ut
-            suscipit.
+                   As a front-end web developer with core experience in React, 
+            I have a strong understanding of the fundamentals of web development 
+            ,including HTML, CSS, and JavaScript. I am also proficient in using 
+            React to build user interfaces that are both functional and visually 
+            appealing.
           </p>
         </div>
       </div>
