--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
     <div id="mcircle"></div>
     <div id="main">
-      <a class="resume" href="https://drive.google.com/file/d/1JMuMY08aYRg-GK32mP77Sv-_x8Ql5wbl/view">Download Resume</a>
+      <a class="resume" href="https://docs.google.com/document/d/1geFfgSqD5sZymtalwQOW4H7o07iX2MpK14NvN0kOzxM/edit?usp=sharing">Download Resume</a>
       <div class="hnav">
         <h3>LOGO</h3>
         <div class="center">
