--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
           </div>
         </div>
         <div id="pblob">
-          <svg id="blobsvg" key="0" width="1000" height="1000" viewBox="0 0 950 950"
+          <svg id="blobsvg" key="0" width=1000" height="1000" viewBox="0 0 940 940"
             <defs>
-              <pattern id="imageId" patternUnits="userSpaceOnUse" width="1000" height="1000">
-                <image href="./public/images/adi.jpeg" x="0" y="0" width="1000" height="1000" />
+              <pattern id="imageId" patternUnits="userSpaceOnUse" width="1200" height="1200">
+                <image  href="./public/images/m.jpeg" x="0" y="40" width="1100" height="1100" />
               </pattern>
             </defs>
             <g clip-path="url(#shape)">
@@ -68,10 +68,10 @@
         <div id="blobright">
           <div id="header">
             <h1 id="center">
-              <span class="a">W</span><span class="a">E</span><span class="a">B</span>
+              <span class="bright a">F</span><span class="bright a">U</span><span class="bright a">L</span> <span class="bright a">L</span> &nbsp;&nbsp; <span class="a">S</span><span class="a">T</span><span class="a">A</span><span class="a">C</span><span class="a">K</span>
             </h1>
             <h1 id="center">
-              <span class="a">D</span><span class="a">E</span><span class="a">V</span><span class="a">E</span><span class="a">L</span><span class="a">O</span><span class="a">P</span><span class="a">E</span><span class="a">R</span>
+              <span class="a">W</span><span class="a">E</span> <span class="a">B</span> &nbsp;&nbsp; <span class="a">D</span><span class="a">E</span><span class="a">V</span><span class="a">E</span><span class="a">L</span><span class="a">O</span><span class="a">P</span><span class="a">E</span><span class="a">R</span>
             </h1>
           </div>
           <div id="skills">
@@ -221,3 +221,4 @@
 </body>
 
 </html>
+
