--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
     </div>
     <div id="mcircle"></div>
     <div id="main">
-      <a class="resume" href="https://docs.google.com/document/d/1geFfgSqD5sZymtalwQOW4H7o07iX2MpK14NvN0kOzxM/edit?usp=sharing">Download Resume</a>
+       <div id="rem">
+        <a class="resume1" href="https://calendly.com/adityac22f/30min">Collaboration</a>
+        <a class="resume2" href="https://docs.google.com/document/d/1geFfgSqD5sZymtalwQOW4H7o07iX2MpK14NvN0kOzxM/edit?usp=sharing">Download Resume</a>
+      </div>
       <div class="hnav">
         <h3>LOGO</h3>
         <div class="center">
