--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
   <title>Aditya.tech</title>
+  <meta name="title" content="Adiya kumar" />
+  <meta name="description" content="Created By Adi" />
 </head>
 <body>
   <div id="parentofall">
