update make this responsive

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="apple-touch-icon" sizes="180x180" href="/favicon_io/apple-touch-icon.png" />
-  <link rel="manifest" href="/public/images/favicon.png "/>
+  <link rel="manifest" href="/public/images/favicon.png " />
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css" />
   <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet" />
@@ -14,6 +15,7 @@
   <meta name="title" content="Adiya kumar" />
   <meta name="description" content="Created By Adi" />
 </head>
+
 <body>
   <div id="parentofall">
     <div id="loader">
@@ -25,7 +27,7 @@
     </div>
     <div id="mcircle"></div>
     <div id="main">
-       <div id="rem">
+      <div id="rem">
         <a class="resume1" href="https://calendly.com/adityac22f/30min">Collaboration</a>
         <a class="resume2" href="https://docs.google.com/document/d/1geFfgSqD5sZymtalwQOW4H7o07iX2MpK14NvN0kOzxM/edit?usp=sharing">Download Resume</a>
       </div>
@@ -53,11 +55,10 @@
           </div>
         </div>
         <div id="pblob">
-          <svg id="blobsvg" key="0" width=1000" height="1000" viewBox="0 0 940 940"
-            <defs>
-              <pattern id="imageId" patternUnits="userSpaceOnUse" width="1200" height="1200">
-                <image  href="./public/images/m.jpeg" x="0" y="40" width="1100" height="1100" />
-              </pattern>
+          <svg id="blobsvg" key="0" width=1000" height="1000" viewBox="0 0 940 940" <defs>
+            <pattern id="imageId" patternUnits="userSpaceOnUse" width="1200" height="1200">
+              <image href="./public/images/m.jpeg" x="0" y="40" width="1100" height="1100" />
+            </pattern>
             </defs>
             <g clip-path="url(#shape)">
               <path id="path1" fill="url(#imageId)" d="M774,616Q776,732,679.5,850Q583,968,482,836.5Q381,705,227,680Q73,655,120.5,517Q168,379,218.5,239Q269,99,417,116.5Q565,134,696.5,179.5Q828,225,800,362.5Q772,500,774,616Z" />
@@ -82,7 +83,7 @@
           <div id="skills">
             <div id="skleft">
               <div id="skleftchild">
-                <h5 class="point bright a" >HTML 5</h5>
+                <h5 class="point bright a">HTML 5</h5>
                 <h5 class="point a">CSS 3</h5>
                 <h5 class="point a">JavaScript ES6</h5>
                 <h5 class="point a" id="ib">GSAP</h5>
@@ -90,7 +91,7 @@
             </div>
             <div id="skright">
               <div id="skrightchild">
-                <h5 class="point a" >Node.JS</h5>
+                <h5 class="point a">Node.JS</h5>
                 <h5 class="point a">Express.JS</h5>
                 <h5 class="point a">MongoDB</h5>
                 <h5 class="point a" id="ib">React.JS</h5>
@@ -170,17 +171,17 @@
       <div class="wrapper">
         <div class="marquee">
           <p>
-                  As a front-end web developer with core experience in React, 
-            I have a strong understanding of the fundamentals of web development 
-            ,including HTML, CSS, and JavaScript. I am also proficient in using 
-            React to build user interfaces that are both functional and visually 
+            As a front-end web developer with core experience in React,
+            I have a strong understanding of the fundamentals of web development
+            ,including HTML, CSS, and JavaScript. I am also proficient in using
+            React to build user interfaces that are both functional and visually
             appealing.
           </p>
           <p>
-                   As a front-end web developer with core experience in React, 
-            I have a strong understanding of the fundamentals of web development 
-            ,including HTML, CSS, and JavaScript. I am also proficient in using 
-            React to build user interfaces that are both functional and visually 
+            As a front-end web developer with core experience in React,
+            I have a strong understanding of the fundamentals of web development
+            ,including HTML, CSS, and JavaScript. I am also proficient in using
+            React to build user interfaces that are both functional and visually
             appealing.
           </p>
         </div>
@@ -197,11 +198,11 @@
           </p>
           <!-- /* this code is All Rights Reserved form aditya.tech */ -->
           <p id="adidesc">
-            As a front-end web developer with core experience in React, 
-            I have a strong understanding of the fundamentals of web development 
-            ,including HTML, CSS, and JavaScript. I am also proficient in using 
-            React to build user interfaces that are both functional and visually 
-            appealing. 
+            As a front-end web developer with core experience in React,
+            I have a strong understanding of the fundamentals of web development
+            ,including HTML, CSS, and JavaScript. I am also proficient in using
+            React to build user interfaces that are both functional and visually
+            appealing.
           </p>
         </div>
         <div id="realaboutright"></div>
@@ -226,4 +227,3 @@
 </body>
 
 </html>
-
