--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
         </div>
       </div>
     </div>
+    <div id="maintenance-popup" class="popup">
+      <span class="close-btn"><i class="ri-close-line"></i></span>
+      <div class="popup-content">
+        <p>Site is under maintenance. We'll be back shortly with exciting updates!</p>
+        <audio id="popup-sound" src="./public/tune/mixkit-airplane-seatbelt-tone-1585.mp3"></audio>
+      </div>
+    </div>
+    
     <div id="mcircle"></div>
     <div id="main">
       <div id="rem">
