--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
         <i id="rightbtn" class="ri-arrow-right-s-line"></i>
         <div id="p1lineparent">
           <div id="p1line">
+            <a class="s11 text" href="#">Coming soon......</a>
             <a class="s12" id="yellow" href="https://adityakr3.github.io/Explore-Landing-Page-/"></a>
             <a class="s13" href="https://adityakr3.github.io/lagunitas-website/"></a>
           </div>
