--- a/index.html
+++ b/index.html
@@ -139,12 +139,19 @@
         <i id="rightbtn" class="ri-arrow-right-s-line"></i>
         <div id="p1lineparent">
           <div id="p1line">
-            <a class="s11 text" href="#">Coming soon......</a>
+            <div class="s11 text vide">
+              <video autoplay muted loop id="background-video">
+                <source src="./public/video/v1.mp4" type="video/mp4">
+              </video>
+              <a class="overlay-link" href="https://animation-beta-five.vercel.app">
+
+              </a>
+            </div>
             <a class="s12" id="yellow" href="https://adityakr3.github.io/Explore-Landing-Page-/"></a>
             <a class="s13" href="https://adityakr3.github.io/lagunitas-website/"></a>
           </div>
           <div id="p1line">
-            <a class="s14" href="https://adityakr3.github.io/Tik-tok-game/"></a>
+            <a class="s14" href="https://adityakr3.github.io/Tik-tok-game/"> jhgjhgjhg </a>
             <a class="s15" href="https://translater-upper-case-and-lower-case.vercel.app"></a>
             <a class="s16" href="#"></a>
           </div>
